fixed add button overlap

--- a/src/components/TransactionInfo/index.css
+++ b/src/components/TransactionInfo/index.css
@@ -6,6 +6,7 @@
 }
 .transaction-info{
     position: relative;
+    padding-bottom: 20px;
 }
 .no-transaction{
     display: flex;
